# hiring-test-fulll

./: .gitignore
Algo/: fizzbuzz.js  fizzbuzz.php  fizzbuzz.py
DataEngineer/Junior/: bike_investigation.py  pyproject.toml  test_bike_investigation.py
